kubernetes_deps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vuln-ingress
  namespace: mustang
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /vuln
            pathType: Prefix
            backend:
              service:
                name: vuln-svc
                port:
                  number: 3000
          - path: /sast
            pathType: Prefix
            backend:
              service:
                name: sast-svc
                port:
                  number: 5050
          - path: /cyber
            pathType: Prefix
            backend:
              service:
                name: cyber-svc
                port:
                  number: 5051
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cyber-redirect-ingress
  namespace: mustang
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /static/index.html
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /cyber
            pathType: Exact
            backend:
              service:
                name: cyber-svc
                port:
                  number: 5051
