kubernetes_deps/front-end.yaml
apiVersion: v1 
kind: Namespace
metadata: 
  name: mustang 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vuln-dep
  namespace: mustang
  labels:
    prod: "true"
    tier: bmw
  annotations: 
    prometheus.io/scrape: "true" 
    prometheus.io/port: "3000" 
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      tier: bmw
  template:
    metadata:
      labels:
        tier: bmw
    spec:
      priorityClassName: vuln-pc
      serviceAccountName: vuln
      affinity: 
        podAntiAffinity: 
          requiredDuringSchedulingIgnoredDuringExecution: 
            - labelSelector: 
                matchLabels: 
                  tier: bmw 
              topologyKey: "kubernetes.io/hostname"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
      containers:
        - name: vuln-con
          image: furkhan2000/shark:frontend
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true 
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m"
              memory: "300Mi"
            limits:
              cpu: "500m"
              memory: "650Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 8
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 8
            periodSeconds: 10
          volumeMounts:
            - name: store-room 
              mountPath: /pvcstore
      volumes:
        - name: store-room 
          persistentVolumeClaim:
            claimName: vuln-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vuln-svc
  namespace: mustang
spec:
  selector:
    tier: bmw
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: vuln-np 
  namespace: mustang 
spec:   
  podSelector: 
    matchLabels: 
      tier: bmw 
  policyTypes: 
  - Ingress 
  - Egress 
  ingress: 
    - from:    # allow traffic from all pods in the same namespace as the pod(s) selected for this NetworkPolicy.
      - ipBlock: 
          cidr: 0.0.0.0/0  
      ports: 
        - protocol: TCP 
          port: 3000 
  egress: 
    - to:  
      - ipBlock: 
          cidr: 0.0.0.0/0 
      ports: 
        - protocol: TCP 
          port: 443 
        - protocol: TCP 
          port: 80 
        - protocol: UDP 
          port: 53
